yes, nothing is working but i swear i'm working on it

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <body>
 
         <div id="player">
+            <div class="slidecontainer">
+                <input type="range" min="1" max="100" value="50" class="slider" id="start">
+              </div>
 
+              <div class="slidecontainer">
+                <input type="range" min="1" max="100" value="50" class="slider" id="end">
+              </div>
         </div>
 
         <script src="/public/js/materialize.js"></script>
-        <script src="/public/js/wavesurfer.js"></script>
         <script src="/public/js/main.js"></script>
     </body>
 </html>
