--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" src="/public/css/style.css">
-        <link rel="stylesheet" src="/public/css/materialize.css">
-    </head>
-    <body>
 
-        <div id="player">
-            <div class="slidecontainer">
-                <input type="range" min="1" max="100" value="50" class="slider" id="start">
-              </div>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" src="/public/css/style.css">
+    <link rel="stylesheet" src="/public/css/materialize.css">
+</head>
 
-              <div class="slidecontainer">
-                <input type="range" min="1" max="100" value="50" class="slider" id="end">
-              </div>
+<body>
+
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#" class="brand-logo">Logo</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down"></ul>
+        </div>
+    </nav>
+
+    <div id="player">
+        <div class="slidecontainer">
+            <input type="range" min="1" max="100" value="50" class="slider" id="start">
         </div>
 
-        <script src="/public/js/materialize.js"></script>
-        <script src="/public/js/main.js"></script>
-    </body>
+        <div class="slidecontainer">
+            <input type="range" min="1" max="100" value="50" class="slider" id="end">
+        </div>
+    </div>
+
+    <h3></h3>
+
+    <script src="/public/js/materialize.js"></script>
+    <script src="/public/js/main.js"></script>
+</body>
+
 </html>
