--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" src="public/css/style.css">
-    <link rel="stylesheet" src="public/css/materialize.css" media="screen,projection">
+    <link rel="stylesheet" src="./css/style.css">
+    <link rel="stylesheet" src="./css/materialize.css">
 </head>
 
 <body>
