--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/materialize.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/loader.css"> -->
 </head>
 
 <body>
@@ -14,7 +15,7 @@
 
         <nav id="nav">
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo">SUCE MA BITE</a>
+                <a href="#" class="brand-logo">Wavesurfer player</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down"></ul>
             </div>
         </nav>
@@ -23,9 +24,7 @@
 
             <div id="waveform"></div>
 
-            <a class="waves-effect waves-light btn-small" id="play"></a>
-            
-            <a class="waves-effect waves-light btn-small" id="pause"></a>
+            <a class="waves-effect waves-light btn-small" id="playpause"><i class="medium material-icons" id="label">play_circle_outline</i></a>
 
             <div class="slidecontainer">
                 <input type="range" min="1" max="100" value="0" class="slider" id="start">
@@ -34,6 +33,37 @@
             <div class="slidecontainer">
                 <input type="range" min="1" max="100" value="100" class="slider" id="end">
             </div>
+        </div>
+
+        <!-- Loader 8 -->
+
+        <div id="loader">
+
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100"
+                enable-background="new 0 0 100 100" xml:space="preserve">
+                <rect fill="#fff" width="3" height="100" transform="translate(0) rotate(180 3 50)">
+                    <animate attributeName="height" attributeType="XML" dur="1s" values="30; 100; 30"
+                        repeatCount="indefinite" />
+                </rect>
+                <rect x="17" fill="#fff" width="3" height="100" transform="translate(0) rotate(180 20 50)">
+                    <animate attributeName="height" attributeType="XML" dur="1s" values="30; 100; 30"
+                        repeatCount="indefinite" begin="0.1s" />
+                </rect>
+                <rect x="40" fill="#fff" width="3" height="100" transform="translate(0) rotate(180 40 50)">
+                    <animate attributeName="height" attributeType="XML" dur="1s" values="30; 100; 30"
+                        repeatCount="indefinite" begin="0.3s" />
+                </rect>
+                <rect x="60" fill="#fff" width="3" height="100" transform="translate(0) rotate(180 58 50)">
+                    <animate attributeName="height" attributeType="XML" dur="1s" values="30; 100; 30"
+                        repeatCount="indefinite" begin="0.5s" />
+                </rect>
+                <rect x="80" fill="#fff" width="3" height="100" transform="translate(0) rotate(180 76 50)">
+                    <animate attributeName="height" attributeType="XML" dur="1s" values="30; 100; 30"
+                        repeatCount="indefinite" begin="0.1s" />
+                </rect>
+            </svg>
+
         </div>
 
     </div>
