--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         <div id="player">
 
             <div id="waveform">
-                <div id="loader">
+                <!-- <div id="loader">
 
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100"
@@ -50,14 +50,14 @@
                         </rect>
                     </svg>
 
-                </div>
+                </div> -->
             </div>
 
-            <a class="waves-effect waves-light btn-small" id="playpause"><i class="medium material-icons"
-                    id="label">play_circle_outline</i></a>
+            <p>Slice from : <h3 id="startTime"></h3><h3 id="endTime"></h3></p>
+            <a class="waves-effect waves-light btn-small" id="playpause"><i class="medium material-icons" id="label">play_circle_outline</i></a>
 
-            <input type="range" min="0" max="100" value="0" class="slider" id="start">
-            <input type="range" min="1" max="100" value="100" class="slider" id="end">
+            <input type="range" min="0" max="100" value="0" class="slider" id="start" oninput="startInputHandler">
+            <input type="range" min="1" max="100" value="100" class="slider" id="end" oninput="endInputHandler">
 
         </div>
 
