--- a/public/index.html
+++ b/public/index.html
@@ -54,11 +54,13 @@
                 </div> -->
             </div>
 
+            <div id="controls">
+                <a class="waves-effect waves-light btn-small control" id="playpause"><i class="medium material-icons" id="label">play_circle_outline</i></a>
+            </div>
+            
+            <div id="slider" onclick="updateStartEnd()"></div>
+
             <div id="display">Slice from : <h4 id="startTime"></h4> to : <h4 id="endTime"></h4></div>
-
-            <a class="waves-effect waves-light btn-small" id="playpause"><i class="medium material-icons" id="label">play_circle_outline</i></a>
-
-            <div id="slider"></div>
 
         </div>
 
